--- a/web/css/base.css
+++ b/web/css/base.css
@@ -29,6 +29,69 @@ html,body {
   clear:both;
 }
 
+h1,h2,h3,h4,h5,h6 {
+  font-weight:800;
+  margin:15px 0;
+}
+
+h1 {
+  font-size:2.8em;
+}
+
+h2 {
+  font-size:2.4em;
+}
+
+h3 {
+  font-size:2em;
+}
+
+h4 {
+  font-size:1.75em;
+}
+
+h5 {
+  font-size:1.5em;
+}
+
+h6 {
+  font-size:1.25em;
+}
+
+p {
+  line-height:25px;
+  margin:20px 0;
+}
+
+.button {
+  display:inline-block !important;
+  border:0;
+  padding:10px 18px;
+  outline:0 none;
+  color:#fff;
+  border-radius:3px;
+  background-color:#dadada;
+}
+
+.button.bayern {
+  background-color:#961933;
+}
+
+.pulse {
+  animation: pulse 1s infinite ease;
+}
+
+@keyframes pulse {
+  0% {
+    transform:scale(1.1,1.1);
+    -webkit-transform:scale(1.1,1.1)
+  }
+  100% {
+    transform:scale(1,1);
+    -webkit-transform:scale(1,1);
+  }
+}
+
 header {
   position:relative;
   background-color:#961933;
@@ -70,7 +133,7 @@ header nav ul > li a {
   position:relative;
   min-height:100%;
   /*height:1200px;*/
-  /*height:auto;*/
+  height:100%;
   margin:-83px 0 -105px;
   padding:83px 0 105px;
 }
