--- a/web/css/bayern.css
+++ b/web/css/bayern.css
@@ -1,11 +1,12 @@
 #teaser {
   position:relative;
+  height:100%;
 }
 
 #teaser .left {
   position:relative;
   float:left;
-  /*height:100%;*/
+  height:100%;
   width:50%;
   overflow:hidden;
 }
@@ -20,4 +21,25 @@
   float:right;
   padding:50px;
   width:50%;
+}
+
+#teaser .right .content-box {
+  position:relative;
+  width:80%;
+  margin:0 auto;
+  padding:50px 0;
+}
+
+#teaser .right .content-box h1 {
+  font-size:2em;
+}
+
+#teaser .right .content-box p {
+
+}
+
+#teaser .right .content-box .submit-operation {
+  position:relative;
+  margin-top:30px;
+  /*text-align:center;*/
 }
