--- a/web/css/bayern.css
+++ b/web/css/bayern.css
@@ -35,11 +35,23 @@
 }
 
 #teaser .right .content-box p {
-
+  font-size:1.2em;
+  line-height:35px;
+  text-align:justify;
 }
 
 #teaser .right .content-box .submit-operation {
   position:relative;
   margin-top:30px;
   /*text-align:center;*/
+}
+
+#registration-content {
+  position:relative;
+}
+
+#registration-content #registration-form-container {
+  position:relative;
+  width:45%;
+  margin:0 auto;
 }
