--- a/web/css/base.css
+++ b/web/css/base.css
@@ -105,7 +105,14 @@ form label + input[type=text], form label + input[type=password] {
 
 form .help-block {
   /*margin-bottom:20px;*/
+  margin-top:5px;
+  font-size:0.75em;
+  padding-left:5px;
   color:red;
+}
+
+.form-center {
+  text-align:center;
 }
 
 .pulse {
@@ -155,8 +162,8 @@ header nav ul > li {
 }
 
 header nav ul > li a {
-  font-size:0.85em;
-  font-weight:800;
+  /*font-size:0.85em;*/
+  /*font-weight:800;*/
 }
 
 /* Main Content */
@@ -164,7 +171,7 @@ header nav ul > li a {
   position:relative;
   min-height:100%;
   /*height:1200px;*/
-  height:100%;
+  height:auto;
   margin:-83px 0 -105px;
   padding:83px 0 105px;
 }
