Home morning commit

--- a/web/css/base.css
+++ b/web/css/base.css
@@ -71,6 +71,8 @@ p {
   color:#fff;
   border-radius:3px;
   background-color:#dadada;
+  cursor:pointer;
+  font-family:inherit;
 }
 
 .button.bayern {
