--- a/web/css/bayern.css
+++ b/web/css/bayern.css
@@ -68,12 +68,12 @@
   top:-12px;
 }
 
-#registration-content #registration-form-container #registration-form-header .bayern-wangkanai {
+#registration-content #registration-form-container #registration-form-header .bayern-sponsored {
   position:relative;
   text-align:center;
 }
 
-#registration-content #registration-form-container #registration-form-header .bayern-wangkanai img {
+#registration-content #registration-form-container #registration-form-header .bayern-sponsored img {
   width:230px;
   height:auto;
 }
@@ -82,9 +82,17 @@
   width:100%;
 }
 
+#registration-content #registration-form-container #registration-form-header h1 {
+  font-size:1.85em;
+  margin-top:35px;
+  text-align:center;
+  font-size:400;
+  color:#961933;
+}
+
 #registration-content #registration-form-container #registration-form {
   position:relative;
-  padding:50px 0 100px;
+  padding-bottom:100px;
 }
 
 #registration-content #registration-form-container #registration-form ul > li {
@@ -186,6 +194,39 @@
   color:#a5a5a5;
 }
 
+#registration-content #registration-form-container #registration-form #registration-form-arenas ul > li .form-group .radio-label {
+  position:relative;
+  float:left;
+  margin:2px;
+}
+
+#registration-content #registration-form-container #registration-form #registration-form-arenas ul > li .form-group .radio-label .radio-label-input-group {
+  width:20px;
+  height:20px;
+  margin:0;
+  padding:0;
+  vertical-align:middle;
+  background:url('../images/radiocheck.png') no-repeat;
+  background-size:20px;
+  background-position:0 0;
+}
+
+#registration-content #registration-form-container #registration-form #registration-form-arenas ul > li .form-group .radio-label .radio-label-input-group.checked {
+  background-position:0 -29px;
+}
+
+#registration-content #registration-form-container #registration-form #registration-form-arenas ul > li .form-group .radio-label input[type=radio] {
+  position:absolute;
+  opacity:0;
+}
+
+#registration-content #registration-form-container #registration-form #registration-form-arenas ul > li .form-group .radio-label .custom-radio {
+  position:absolute;
+
+  width:36px;
+  height:36px;
+}
+
 #registration-content #registration-form-container #registration-form #registration-form-arenas ul > li .form-group input[type=radio] {
   display:block;
   margin:3spx;
@@ -278,4 +319,80 @@
   border-radius:30px;
   background-color:#961933;
   cursor:pointer;
+}
+
+/** RENDERER **/
+
+.registration-render {
+  position:relative;
+  padding:50px 0;
+}
+
+.registration-render .header {
+  position:relative;
+  margin:10px 0;
+  text-align:center;
+}
+
+.registration-render .header h1 {
+  font-size:1.8em;
+  font-weight:400;
+}
+
+.registration-render .header p {
+  margin-top:5px;
+  color:red;
+}
+
+.registration-render .registration-information {
+  position:relative;
+  margin-top:50px;
+}
+
+.registration-render .registration-information .row {
+  position:relative;
+  margin:20px 0;
+}
+
+.registration-render .registration-information .row p {
+  margin:0 !important;
+  color:#961933;
+}
+
+.registration-render .registration-information .row p span {
+  color:#000;
+}
+
+.registration-render .registration-information .col-1,
+.registration-render .registration-information .col-2,
+.registration-render .registration-information .col-3,
+.registration-render .registration-information .col-4,
+.registration-render .registration-information .col-5,
+.registration-render .registration-information .col-6 {
+  position:relative;
+  float:left;
+}
+
+.registration-render .registration-information .col-1 {
+  width:calc(100%/6);
+}
+
+.registration-render .registration-information .col-2 {
+  width:calc((100%/6)*2);
+}
+
+.registration-render .registration-information .col-3 {
+  width:calc((100%/6)*3);
+}
+
+.registration-render .registration-information .col-4 {
+  width:calc((100%/6)*4);
+}
+
+.registration-render .registration-information .col-5 {
+  width:calc((100%/6)*5);
+}
+
+.registration-render .registration-information .col-6 {
+  width:calc((100%/6)*6);
 }
