--- a/web/css/base.css
+++ b/web/css/base.css
@@ -69,6 +69,7 @@ p {
   padding:10px 18px;
   outline:0 none;
   color:#fff;
+  text-decoration:none;
   border-radius:3px;
   background-color:#dadada;
   cursor:pointer;
