--- a/web/css/pdf.css
+++ b/web/css/pdf.css
@@ -17,8 +17,13 @@ h1,h3 {
   margin:5px 0;
 }
 
+p {
+  margin:0;
+  font-size:0.85em;
+}
 
-[class^="col"] {
+
+[class^="col-"] {
   float:left;
 }
 
@@ -27,10 +32,19 @@ h1,h3 {
 }
 
 .col-2 {
-  width:calc((100%/6)*2);
+  float:left;
+  width:33.3333333333%
+  /*width:20px;*/
+  /*float:left;*/
+  /*width:calc((100%/6)*2);*/
 }
 
 .col-3 {
+  width:calc((100%/6)*3);
+}
+
+.col-3 p {
+  float:left;
   width:calc((100%/6)*3);
 }
 
