--- a/web/css/pdf.css
+++ b/web/css/pdf.css
@@ -8,13 +8,12 @@ body {
   text-align:center;
 }
 
-img {
-  display:inline-block;
-  width:120px;
+.global-sponsored-header .header {
+  margin-top:30px;
 }
 
 h1,h3 {
-  margin:5px 0;
+  margin:0;
 }
 
 p {
@@ -22,40 +21,59 @@ p {
   font-size:0.85em;
 }
 
+img {
+  display:inline-block;
+  width:120px;
+}
 
 [class^="col-"] {
   float:left;
-}
-
-.col-1 {
-  width:calc(100%/6);
+  /*text-align:center;*/
 }
 
 .col-2 {
   float:left;
-  width:33.3333333333%
-  /*width:20px;*/
-  /*float:left;*/
-  /*width:calc((100%/6)*2);*/
+  width:33.3333333333%;
 }
 
 .col-3 {
-  width:calc((100%/6)*3);
-}
-
-.col-3 p {
   float:left;
-  width:calc((100%/6)*3);
+  width:50%;
 }
 
-.col-4 {
-  width:calc((100%/6)*4);
+.content {
+  position:relative;
+  margin-top:50px;
+  /*text-align:left;*/
+  font-size:0.85em;
 }
 
-.col-5 {
-  width:calc((100%/6)*5);
+.content p {
+  margin:0;
+
 }
 
-.col-6 {
-  width:calc((100%/6)*6);
+.content .information {
+  position:relative;
+}
+
+.content .information h5 {
+  margin:0px 0;
+  text-align:left;
+}
+
+.content .details {
+  position:relative;
+  margin-top:20px;
+}
+
+.content .details p {
+  font-size:0.8em;
+  font-weight:800;
+  /*color:#515151;*/
+  text-align:left;
+}
+
+.content .details p span {
+  color:#000;
 }
