--- a/web/css/pdf.css
+++ b/web/css/pdf.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Garuda";
-  font-size:100%;
+  font-size:11pt;
 }
 
 .global-sponsored-header {
@@ -14,11 +14,12 @@ body {
 
 h1,h3 {
   margin:0;
+  /*font-size:1.5em;*/
 }
 
 p {
   margin:0;
-  font-size:0.85em;
+  font-size:10px !important;
 }
 
 img {
