--- a/web/css/bayern.css
+++ b/web/css/bayern.css
@@ -12,8 +12,11 @@
 }
 
 #teaser .left img {
+  display:block;
+  float:left;
+  width:100%;
   height:100%;
-  width:auto;
+  /*width:auto;*/
 }
 
 #teaser .right {
